@@ -2,6 +2,9 @@
 - Reincluded url_dispatcher module for addons that may use it in the future
 - New reload skin function
 - Log exception on client function upon failure
+- xbmc.Playlist is now callable via lambda function. Mode 1 for video (default), Mode 0 for audio
+- Add function in directory module now accepts streaminfo data (as dictionary)
+- Added StringIO in compat module
 
 [B]2.1.X[/B]
 - Utilize kodi-six to further improve Python 2/3 compatibility
